[package]
name = "regextractor"
version = "0.1.0"
edition = "2021"
authors = ["Christian U."]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "*"
clap = { version = "4.3.0", features = ["derive"] }
num = "0.4.1"
fancy-regex = "0.11.0"
